Fix reflection spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -369,7 +369,7 @@ a {
 
 .footer-spacer {
   // screen height - header height - footer height
-  min-height: calc(100vh - 231px);
+  min-height: calc(100vh - 78px - 231px);
 }
 
 // Transitions
